fixes navButton animation also fos media query for nav on small screen

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -88,6 +88,11 @@ font-size: 2rem;
 
 @media screen and (max-width: 360px) {
     
+a {
+    
+    padding: 0.6rem;
+}
+
 button{
     margin: 0.5rem;
     padding: 1rem;
@@ -122,7 +127,28 @@ button{
     border-radius: 7px;
     font-size: 1.5rem;
 
+    &:hover{
+        border-radius: 7px;
+    }
+
+    &::after{
+       
+        border-radius: 7px;
+      
+      }
+      &:hover::after{
+        transform: scaleX(1.25) scaleY(1.4);
+        border-radius: 7px;
+        box-shadow: 
+        2px 2px 10px $bright-color2, 
+        -2px -2px 10px $bright-color2,
+        2px -2px 10px $bright-color2,
+        -2px 2px 10px $bright-color2;
+        opacity: 0;
+      }
+
    }
+
 
 }
 
